kubernetes/testing/librespeed/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: librespeed
  labels:
    app.kubernetes.io/name: librespeed
    app.kubernetes.io/instance: librespeed
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: librespeed
    app.kubernetes.io/instance: librespeed
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
